Kubernetes/Kube-manifests/manifests-twitter-site/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: frontend
  name: frontend
  annotations:
        prometheus.io/scrape: 'true'
  namespace: twitter-website
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: frontend
